--- a/AgumentedDemo/AgumentedDemo/Base.lproj/Main.storyboard
+++ b/AgumentedDemo/AgumentedDemo/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -33,13 +34,28 @@
                     <view key="view" contentMode="scaleToFill" id="909-TW-QaM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EKX-qD-H28">
+                                <rect key="frame" x="128" y="8" width="100" height="100"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="2TN-HI-Gvr"/>
+                                    <constraint firstAttribute="height" constant="100" id="bZ1-t2-1cj"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="EKX-qD-H28" firstAttribute="centerX" secondItem="909-TW-QaM" secondAttribute="centerX" id="xeg-4Y-cfh"/>
+                            <constraint firstItem="EKX-qD-H28" firstAttribute="top" secondItem="909-TW-QaM" secondAttribute="topMargin" constant="8" id="zqy-zo-xwd"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="IX5-4w-2i8"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LZ3-wC-Wq8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-244" y="-159"/>
+            <point key="canvasLocation" x="-225" y="17"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="8mX-zI-RGr">
